[package]
name = "appproject"
version = "0.1.0"
authors = ["MaartenGDev <hello@maartendev.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = "0.12"
futures = "0.1"
hyperlocal = "0.6"
tokio-core = "0.1.17"
serde = { version = "1.0.100", features = ["derive"] }
serde_json = "1.0.40"
serde-aux = "0.6.1"
tokio = "0.1"
mime = "0.3.13"
http = "0.1"
redis = "0.12.0"
